--- a/css/body.css
+++ b/css/body.css
@@ -1,15 +1,12 @@
-body {
+body{
     height: 100vh;
-    background: linear-gradient(90deg, #000, #000e 35%, #0000), 
+    background: linear-gradient(90deg, #000, #000D 35%, #0000),
     url(../img/background.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: right;
     display: flex;
     flex-direction: column;
     padding: 80px 128px 50px 128px;
+    animation: zoom 1.5s;
 }
-
-
-
-
-
