--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,5 @@
-footer {
-    background-color: violet;
-    height: 21px;
+footer{
+    text-align: center;
+    font-style: italic;
+    color: #fff;
 }
